force-app/main/default/objects/Booking_Line_Item__c/fields/Movie_Booking__c.field-meta.xml
<CustomField>
    <fullName>Movie_Booking__c</fullName>
    <label>Movie Booking</label>
    <referenceTo>Movie_Booking__c</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>