force-app/main/default/objects/Booking_Line_Item__c/fields/Movie_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Movie_Time_Slot__c</fullName>
    <formula>TEXT(Movie_Booking__r.Movie_Time_Slot__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Movie Time Slot</label>
    <type>Text</type>
</CustomField>