force-app/main/default/objects/Booking_Line_Item__c/fields/Seat_Category__c.field-meta.xml
<CustomField>
    <fullName>Seat_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seat Category</label>
    <referenceTo>Seat_Category__c</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>